--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
 
+        <!-- 加密包 -->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.15</version>
+        </dependency>
         <!-- spring boot test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -75,6 +81,7 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+
 
 
     </dependencies>
