--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,17 @@
 
     <groupId>com.hk.surl</groupId>
     <artifactId>Short-URL</artifactId>
+    <packaging>pom</packaging>
     <version>1.0.0-SNAPSHOT</version>
+    <modules>
+        <module>url-common</module>
+        <module>url-core</module>
+        <module>url-service</module>
+        <module>url-web</module>
+        <module>url-interface</module>
+        <module>url-domain</module>
+        <module>url-system</module>
+    </modules>
 
     <parent>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -18,6 +28,9 @@
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
+
+        <spring.boot.version>2.4.0</spring.boot.version>
+
     </properties>
 
     <dependencies>
@@ -33,11 +46,6 @@
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
         <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -50,6 +58,7 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
+        <!-- mybatis plus -->
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
