--- a/url-common/pom.xml
+++ b/url-common/pom.xml
@@ -11,6 +11,16 @@
 
     <artifactId>url-common</artifactId>
     <version>0.1.0</version>
+    <dependencies>
+
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
+        </dependency>
+
+    </dependencies>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
