--- a/url-core/pom.xml
+++ b/url-core/pom.xml
@@ -17,4 +17,17 @@
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
+
+
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
+
+
+
 </project>
