adjust the project core module‘s package subject and complite the compressUtil

--- a/url-core/pom.xml
+++ b/url-core/pom.xml
@@ -24,6 +24,13 @@
             <artifactId>url-domain</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+
+
+        <!-- 加解密包 -->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+        </dependency>
     </dependencies>
 
 
