--- a/url-domain/pom.xml
+++ b/url-domain/pom.xml
@@ -11,5 +11,13 @@
 
     <artifactId>url-domain</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-crypto</artifactId>
+            <version>5.7.15</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
