--- a/url-service/pom.xml
+++ b/url-service/pom.xml
@@ -18,6 +18,12 @@
             <version>1.0.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.hk.surl</groupId>
+            <artifactId>url-core</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
