--- a/url-web/pom.xml
+++ b/url-web/pom.xml
@@ -33,6 +33,12 @@
             <artifactId>url-service</artifactId>
             <version>0.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.hk.surl</groupId>
+            <artifactId>url-core</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
