--- a/pom.xml
+++ b/pom.xml
@@ -66,11 +66,19 @@
             <version>8.0.27</version>
         </dependency>
 
+        <!-- druid 数据源 -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>1.2.8</version>
+        </dependency>
+
+
         <!-- mybatis plus -->
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
-            <version>3.4.3</version>
+            <version>3.4.2</version>
         </dependency>
 
         <!-- Redis -->
