--- a/url-web/pom.xml
+++ b/url-web/pom.xml
@@ -18,6 +18,19 @@
 
     <dependencies>
 
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+        </dependency>
+
+
+
         <!--swagger ui -->
         <dependency>
             <groupId>org.springdoc</groupId>
