fix the mapper not found and complete the common trance log record

--- a/url-domain/pom.xml
+++ b/url-domain/pom.xml
@@ -17,6 +17,12 @@
             <artifactId>hutool-crypto</artifactId>
             <version>5.7.15</version>
         </dependency>
+        <dependency>
+            <groupId>com.hk.surl</groupId>
+            <artifactId>url-common</artifactId>
+            <version>0.1.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
