--- a/url-common/pom.xml
+++ b/url-common/pom.xml
@@ -57,7 +57,10 @@
             <artifactId>ip2region</artifactId>
             <version>1.7.2</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+        </dependency>
 
 
     </dependencies>
