--- a/url-web/pom.xml
+++ b/url-web/pom.xml
@@ -18,6 +18,13 @@
 
     <dependencies>
 
+        <!-- Spring Mobile  -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mobile</artifactId>
+            <version>1.5.22.RELEASE</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
