add the redis cache to store the anonymous user data

--- a/url-web/pom.xml
+++ b/url-web/pom.xml
@@ -35,6 +35,13 @@
             <artifactId>aspectjweaver</artifactId>
         </dependency>
 
+        <!-- redis -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
+
         <!--swagger ui -->
         <dependency>
             <groupId>org.springdoc</groupId>
